Fix crbug 117957 - get settings scrolling with the wheel again. https://bugs.webkit.org/show_bug.cgi?id=81247

Patch by Scott Byer <scottbyer@chromium.org> on 2012-03-15
Reviewed by James Robinson.

Tests to follow.

* page/FrameView.cpp:
(WebCore::FrameView::serviceScriptedAnimations):

Canonical link: https://commits.webkit.org/98451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110889 268f45cc-cd09-0410-ab3c-d52691b4dbfc